fix: more spacing issues

--- a/sites/public/src/components/assistance/Assistance.module.scss
+++ b/sites/public/src/components/assistance/Assistance.module.scss
@@ -57,8 +57,12 @@
     gap: var(--seeds-spacer-content);
 
     .contact-card-subsection {
-      display: block;
+      display: flex;
+      flex-direction: column;
       gap: var(--seeds-s4);
+      &:last-of-type {
+        display: block;
+      }
     }
 
     .contact-card-title {
